# plugin-based-architecture

./: README.md
design/: DESIGN.md
feel-core/: CMakeLists.txt  build_cmake.sh  build_conan.sh  conanfile.py  test_feel_core.sh
feel-core/config/: fcore.conf
feel-core/src/: FCoreConfig.hh.in  FCoreVersion.hh.in  feel_core.cc
feel-core/src/ConfManager/: CMakeLists.txt  ConfManager.cc  ConfManager.hh
feel-core/src/ExitManager/: CMakeLists.txt  ExitHandlers.cc  ExitHandlers.hh  ExitManager.cc  ExitManager.hh
feel-core/src/FCoreLogger/: CMakeLists.txt  FCoreLogger.cc  FCoreLogger.hh
feel-core/src/GIID-DB/: CMakeLists.txt  GIID_DB.cc  GIID_DB.hh
feel-core/src/Logger/: CMakeLists.txt  LogBuffer.cc  LogBuffer.hh  LogCommonDefs.hh  Logger.hh  LoggerImpl.cc  LoggerImpl.hh
feel-core/src/Main/: AppHandler.hh  CMakeLists.txt  HelpHandler.cc  HelpHandler.hh  MainHandler.cc  MainHandler.hh  VersionHandler.cc  VersionHandler.hh
feel-core/src/Plugins/: CMakeLists.txt  Plugin.hh  PluginImpl.cc  PluginImpl.hh  PluginManager.cc  PluginManager.hh
feel-core/src/Services/: CMakeLists.txt  ReadServiceImpl.cc  ReadServiceImpl.hh  WriteServiceImpl.cc  WriteServiceImpl.hh
feel-core/src/SignalManager/: CMakeLists.txt  SignalHandlers.cc  SignalHandlers.hh  SignalManager.cc  SignalManager.hh
feel-core/src/grpcServer/: CMakeLists.txt  grpcServer.cc  grpcServer.hh
feel-core/src/grpcServices/Read/: CMakeLists.txt
feel-core/src/grpcServices/Write/: CMakeLists.txt
feel-features/: CMakeLists.txt  build_conan.sh  conanfile.py  test_feel_feature.sh
feel-features/common_cmake/: common.cmake
feel-features/src/: FFeatureConfig.hh.in  FFeatureVersion.hh.in  feel_feature.cc
feel-features/src/Interfaces/: CMakeLists.txt  Interfaces.cc  Interfaces.hh
feel-features/src/Main/: Application.cc  Application.hh  CMakeLists.txt  HelpHandler.cc  MainHandler.cc  MainHandler.hh  VersionHandler.cc
feel-features/src/Plugins/: CMakeLists.txt  PluginX.cc  PluginX.hh  PluginY.cc  PluginY.hh
feel-features/src/Services/: CMakeLists.txt  Read.cc  Read.hh  Write.cc  Write.hh
feel-features/src/grpcServices/Read/protofiles/: Read.proto
feel-features/src/grpcServices/Write/protofiles/: Write.proto
feel-plugins/: CMakeLists.txt  README.md  compile.sh
feel-plugins/provider/: PluginProvider.hh
feel-plugins/src/trivial/plugin-X/: CMakeLists.txt  PluginX.hh  PluginXImpl.cc  PluginXImpl.hh
feel-plugins/src/trivial/plugin-Y/: CMakeLists.txt  PluginY.hh  PluginYImpl.cc  PluginYImpl.hh
